--- a/mystyle.css
+++ b/mystyle.css
@@ -4,13 +4,13 @@
 }
 @font-face {
     font-family: myRoboto;
-    /* src: url('/fonts/Roboto-Bold.ttf')  format('truetype'); */
-    src: url('../../Sublight_Engines_Landing_Page/fonts/Roboto-Regular.ttf')  format('truetype');
+    src: url('/fonts/Roboto-Bold.ttf')  format('truetype');
+    src: url('fonts/Roboto-Regular.ttf')  format('truetype');
   }
 
 @font-face {
     font-family: Roboto-bold;
-    src: url('../../Sublight_Engines_Landing_Page/fonts/Roboto-Bold.ttf')  format('truetype');
+    src: url('fonts/Roboto-Bold.ttf')  format('truetype');
   }
 
 
