--- a/mystyle.css
+++ b/mystyle.css
@@ -28,6 +28,7 @@
     background-repeat: no-repeat;
     background-size:cover;
 }
+
 nav img {
     position: absolute;
     top: -5px;
@@ -86,7 +87,7 @@ nav li a {
 
 #second {
     width: 100%;
-    height: 711px;
+    /* height: 711px; */
     background-color: #383838;
     padding-top: 0;
     margin-top: 0;
@@ -132,7 +133,7 @@ nav li a {
 
 #third {
     width: 100%;
-    height: 600px;
+    /* height: 600px; */
     display: flex;
     justify-content: center;
 }
@@ -245,7 +246,7 @@ nav li a {
 
 #contact {
     width: 100%;
-    height: 800px;
+    /* height: 800px; */
 
 }
 
@@ -347,11 +348,9 @@ select {
     /* padding: 40px; */
 }
 
-#footer {
-    padding-top: 30px;
-    width: 100%;
-    height: 280px;
-    clear: both;
+.addresses {
+    display: flex;
+    justify-content: space-between;
 }
 #address1 h3, #address2 h3 {
     font-size: 15px;
@@ -413,4 +412,222 @@ select {
 #contact_separator {
     padding-bottom: 30px;
 }
+
+#submit_btn {
+    font-weight: bold;
+    background-color: white;
+    padding: 15px 222px;
+    cursor: pointer;
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+
+@media only screen and (max-device-width: 1024px) {
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    nav ul {
+        width: 90%;
+        padding-right: 0px;
+        font-size: 0.85em;
+    }
+    nav img {
+        position: relative;
+    }
+    #navimg {
+        top: 0px;
+        width: 70%;
+        padding: 0.5em;
+    }
+
+
+
+    .services {
+        padding-left: 1em;
+         padding-right: 1em;
+    }
+    
+
+    #third {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    #description {
+        width: 80%;
+        margin: auto;
+        padding: 20px;
+        text-align: center;
+        
+    }
+    #product_img {
+        text-align: center;
+        width: 80%;
+        padding: 10px;
+
+    }
+
+    #product_line {
+        align-items: center;
+        height: auto;
+    }
+
+    #product_line ul{
+       flex-wrap: wrap;
+       width: 90%;
+       margin: auto;
+       position: relative;
+   
+    }
+
+    #product_line_items {
+        display: flex;
+        height: auto;
+    }
+    #download_btn { 
+        padding: 2em;
+    }
+
+
+}
+
+@media only screen and (max-device-width: 390px) {
+    #services {
+        flex-wrap: wrap;
+    }
+
+    #description {
+        text-align: left;
+        padding-bottom: 50px;
+    }
+
+    #description h1 {
+        font-size: 20px;
+    }
+
+    #description h2 {
+        font-size: 30px;
+    }
+
+    #description p {
+        font-size: 16px;
+        padding: 10px 0 10px 0 ;
+        
+    }
+
+    #product_img {
+        padding-top: 45px;
+    }
+    #product_img img {
+        width: 318px;
+    }
+
+    #product_line_text h2 {
+        font-size: 16px; 
+    }
+    
+    #product_line_text h3 {
+        font-size: 24px;
+        line-height: 30px;
+        padding: 15px 0 50px 0;
+    }
+
+    #products_separator {
+        margin-top: 20px;
+    }
+
+    #contactform {
+        width: 376px;
+
+    }
+    #contactform input {
+        width: 350px;
+    }
+
+    #phone_and_lang {
+        height: 160px;
+    }
+    .lang {
+        width: 350px;
+        left: 0;
+        top: 85px;
+    }
+    #lang {
+        width: 376px;
+    }
+
+    #contactform {
+        height: auto;
+    }
+    #contact_separator {
+        width: 60%;
+        padding: 30px;
+        margin: auto;
+        text-align: center;
+    }
+
+    #submit_btn { 
+        margin-top: 5px;
+        margin-bottom: 50px;
+        padding: 15px 160px;
+    }
+
+    #since {
+        flex-direction: column;
+        text-align: center;
+        height: auto;
+
+    }
+    #since h3 {
+        padding: 45px;
+        padding-bottom: 10px;
+        font-size: 40px;
+        
+    }
+    #since img {
+        padding: 30px;
+        padding-top: 10px;
+    }
+
+   .addresses {
+       justify-content: center;
+       flex-direction: column;
+       align-items: center;
+   }
+
+   #address1, #address2 {
+       width: 340px;
+       float: none;
+       text-align: center;
+       padding: 25px 10px 25px 10px;
+   }
+   #address1 p, #address2 p {
+       text-align: center;
+   }
+
+   #copyright p {
+       font-size: 10px;
+   }
+
+   .separator {
+       padding: 40px 10px 40px 10px;
+   }
+
+   #stayintouch {
+       padding: 30px 10px 20px 10px;
+   }
+   #stayintouch h3 {
+       font-size: 16px;
+   }
+   #stayintouch h4 {
+       font-size: 24px;
+   }
+
+   #contact_separator {
+       padding-top: 10px;
+   }
+}
+
+
+
 
