--- a/mystyle.css
+++ b/mystyle.css
@@ -27,6 +27,7 @@
     background-image: url(images/bkg_1.jpg);
     background-repeat: no-repeat;
     background-size:cover;
+    background-position: center;
 }
 
 nav img {
@@ -49,7 +50,7 @@ nav ul {
     list-style-type: none;
     margin: 0px;
     padding-right: 65px;
-    overflow: auto;
+    /* overflow: auto; */
     float: right;
 }
 
@@ -58,6 +59,10 @@ nav li {
    line-height: 70px;
   
 }
+nav li:hover {
+    background-color: #555;
+}
+
 nav li a {
     padding: 15px;
     color: #FFFF;
@@ -422,6 +427,34 @@ select {
     margin-bottom: 10px;
 }
 
+#download {
+    font-weight: bold;
+    padding: 15px 60px;
+    cursor: pointer;
+    color:#FFFF;
+    border: 2px solid white;
+    background-color: Transparent;
+}
+
+.toggle-button {
+    position: absolute;
+    top: 1.28em;
+    right: 1em;
+    display: none;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 30px;
+    height: 22px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+
+}
+
 @media only screen and (max-device-width: 1024px) {
     nav {
         display: flex;
@@ -447,7 +480,10 @@ select {
         padding-left: 1em;
          padding-right: 1em;
     }
-    
+    #webuild{
+        padding-left: 10px;
+        padding-right: 30px;
+    }
 
     #third {
         flex-direction: column-reverse;
@@ -492,8 +528,94 @@ select {
 }
 
 @media only screen and (max-device-width: 390px) {
+    #main {
+        height: 555px;
+    }
+
+    #header {
+
+    }
+    nav {
+        position: fixed;
+        top: 0;
+        flex-direction: column;
+    }
+
+    nav ul  {
+        position: absolute;
+        top: 60px;
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        margin: 10px 0 10px 0;
+        background: rgba(0, 0, 0, 0.69);
+       
+    }
+
+    .navbar_links li {
+        /* width: 100%; */
+        height: 30px;
+        border-top: 0.75px solid white;
+        font-size: 13px;
+        
+    }
+
+    .navbar_links .active {
+        display: flex;
+        z-index: 5;
+    }
+
+    .navbar_links a {
+        padding: 0;
+        padding-left: 1.5em;
+       
+        
+    }
+
+    nav li {
+        line-height: 2em;
+        
+    }
+    
+    #navimg {
+        left: 0px;
+        width: 50%;
+        top: 10px;
+        
+    }
+    
+    .toggle-button {
+        display: flex;
+    }
+
+
+    #slogan {
+        top: 325px
+    }
+    #slogan h1 {
+        font-size: 28px;
+    }
+    #slogan h2 {
+        font-size: 48px;
+    }
+
+    #button {
+        width: 65px;
+    }
+
+    #onestep h1 {
+        font-size: 16px;
+    }
+    #onestep h2 {
+        font-size: 24px;
+    }
+
     #services {
         flex-wrap: wrap;
+        padding: 40px 0 60px 0;
+    }
+    .services {
+        padding: 20px;
     }
 
     #description {
@@ -513,6 +635,14 @@ select {
         font-size: 16px;
         padding: 10px 0 10px 0 ;
         
+    }
+
+    #download_btn {
+        width: 90%;
+        background: rgba(0, 0, 0, 0.69);
+        position: fixed;
+        bottom: 0;
+        padding: 10px 20px 20px 20px;
     }
 
     #product_img {
@@ -610,7 +740,7 @@ select {
    }
 
    .separator {
-       padding: 40px 10px 40px 10px;
+       padding: 20px 10px 20px 10px;
    }
 
    #stayintouch {
