added 375 and 576 resp

--- a/mystyle.css
+++ b/mystyle.css
@@ -59,8 +59,9 @@ nav li {
    line-height: 70px;
   
 }
-nav li:hover {
-    background-color: #555;
+nav li a:hover {
+    /* background-color: #555; */
+    color: #FF7630;
 }
 
 nav li a {
@@ -134,6 +135,11 @@ nav li a {
 .services {
     padding-left: 70px;
     padding-right: 70px;
+}
+
+#webuild{
+    padding-left: 10px;
+    padding-right: 30px;
 }
 
 #third {
@@ -438,7 +444,7 @@ select {
 
 .toggle-button {
     position: absolute;
-    top: 1.28em;
+    top: 2em;
     right: 1em;
     display: none;
     justify-content: space-between;
@@ -455,93 +461,21 @@ select {
 
 }
 
-@media only screen and (max-device-width: 1024px) {
-    nav {
-        display: flex;
-        justify-content: space-between;
-    }
-    nav ul {
-        width: 90%;
-        padding-right: 0px;
-        font-size: 0.85em;
-    }
-    nav img {
-        position: relative;
-    }
-    #navimg {
-        top: 0px;
-        width: 70%;
-        padding: 0.5em;
-    }
-
-
-
-    .services {
-        padding-left: 1em;
-         padding-right: 1em;
-    }
-    #webuild{
-        padding-left: 10px;
-        padding-right: 30px;
-    }
-
-    #third {
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-    #description {
-        width: 80%;
-        margin: auto;
-        padding: 20px;
-        text-align: center;
-        
-    }
-    #product_img {
-        text-align: center;
-        width: 80%;
-        padding: 10px;
-
-    }
-
-    #product_line {
-        align-items: center;
-        height: auto;
-    }
-
-    #product_line ul{
-       flex-wrap: wrap;
-       width: 90%;
-       margin: auto;
-       position: relative;
-   
-    }
-
-    #product_line_items {
-        display: flex;
-        height: auto;
-    }
-    #download_btn { 
-        padding: 2em;
-    }
-
-
-}
-
-@media only screen and (max-device-width: 390px) {
+@media only screen and (min-device-width: 375px) and (max-device-width: 768px) {
     #main {
         height: 555px;
     }
+    
 
-    #header {
-
-    }
     nav {
         position: fixed;
         top: 0;
+        display: flex;
+        justify-content: space-between;
         flex-direction: column;
     }
 
-    nav ul  {
+    .navbar_links  {
         position: absolute;
         top: 60px;
         display: none;
@@ -560,9 +494,8 @@ select {
         
     }
 
-    .navbar_links .active {
+    .navbar_links.active {
         display: flex;
-        z-index: 5;
     }
 
     .navbar_links a {
@@ -578,9 +511,9 @@ select {
     }
     
     #navimg {
-        left: 0px;
+        left: 15px;
         width: 50%;
-        top: 10px;
+        top: 22px;
         
     }
     
@@ -618,10 +551,19 @@ select {
         padding: 20px;
     }
 
+    #third {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
     #description {
         text-align: left;
         padding-bottom: 50px;
+        width: 80%;
+        margin: auto;
+        padding: 20px;
     }
+
 
     #description h1 {
         font-size: 20px;
@@ -638,18 +580,40 @@ select {
     }
 
     #download_btn {
-        width: 90%;
+        width: 100%;
         background: rgba(0, 0, 0, 0.69);
         position: fixed;
         bottom: 0;
-        padding: 10px 20px 20px 20px;
+        padding: 10px 20px 20px 0px;
     }
 
+    #product_line {
+        align-items: center;
+        height: auto;
+    }
+    #product_line ul{
+        flex-wrap: wrap;
+        width: 90%;
+        margin: auto;
+        position: relative;
+     }
+
     #product_img {
-        padding-top: 45px;
+        text-align: center;
+        width: 80%;
+        padding: 20px 10px 10px 0px;
+
     }
     #product_img img {
         width: 318px;
+    }
+
+    #product_line_items {
+        display: flex;
+        height: auto;
+    }
+    #product_line_items li {
+        padding: 20px;
     }
 
     #product_line_text h2 {
@@ -667,28 +631,29 @@ select {
     }
 
     #contactform {
-        width: 376px;
+        width: 356px;
+        height: auto;
+        padding-left: 15px;
 
     }
+ 
+
     #contactform input {
-        width: 350px;
+        width: 320px;
     }
 
     #phone_and_lang {
         height: 160px;
     }
     .lang {
-        width: 350px;
+        width: 345px;
         left: 0;
         top: 85px;
     }
     #lang {
-        width: 376px;
+        width: 345px;
     }
 
-    #contactform {
-        height: auto;
-    }
     #contact_separator {
         width: 60%;
         padding: 30px;
@@ -699,7 +664,7 @@ select {
     #submit_btn { 
         margin-top: 5px;
         margin-bottom: 50px;
-        padding: 15px 160px;
+        padding: 15px 145px;
     }
 
     #since {
@@ -756,7 +721,88 @@ select {
    #contact_separator {
        padding-top: 10px;
    }
+   #copyright {
+       padding-bottom: 90px;
+   }
+
 }
+
+/*==========================576============================ */
+@media only screen and (min-device-width: 576px) and (max-device-width: 768px) {
+
+    #navimg {
+        left: 15px;
+        width: 40%;
+        top: 22px;
+        
+    }
+    
+    #slogan {
+        top: 380px;
+    }
+    #onestep h1 {
+        font-size: 20px;
+    }
+    #onestep h2 {
+        font-size: 35px;
+    }
+
+    #services {
+        flex-direction: column;
+        align-items: center;
+        padding: 40px 0 60px 0;
+    }
+
+    .services {
+        padding: 20px;
+    }
+
+    #product_img {
+        padding-top: 45px;
+    }
+    #product_img img {
+        width: 450px;
+    }
+
+    #description {
+        text-align: left;
+        padding-bottom: 50px;
+    }
+
+    #description h1 {
+        font-size: 25px;
+    }
+
+    #description h2 {
+        font-size: 35px;
+    }
+
+    #description p {
+        font-size: 16px;
+        padding: 10px 0 10px 0 ;
+        
+    }
+    #product_line_text h2 {
+        font-size: 25px; 
+    }
+    
+    #product_line_text h3 {
+        font-size: 35px;
+        line-height: 45px;
+        padding: 20px 0 50px 0;
+    }
+
+    #product_line_items ul {
+        flex-direction: column;
+    }
+
+    #since h3 {
+        font-size: 53px;
+    }
+
+}
+
+
 
 
 
